# generix_flow

./: .gitignore  README.md  database_explorer.py  pyproject.toml  setup.py
docs/: queries.md  trends.md
src/flow_ai_generix/: Database Analysis.md  Database_analysis.md  main.py
src/flow_ai_generix/crews/research_crew/: research_crew.py
src/flow_ai_generix/crews/research_crew/config/: agents.yaml  tasks.yaml
src/flow_ai_generix/crews/write_x_crew/: write_x_crew.py
src/flow_ai_generix/pipelines/: pipeline.py
src/flow_ai_generix/tools/: mysql_tools.py
